# infosec-seven

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pre-commit.yaml
data/: Files.7z  HashList.txt  VirusHashList.txt
data/files_infected_17/: 10.txt  3.txt  5.txt
infosec_labs/1/: lab1-report.2025.02.19-23_46_15.txt  timing_results.ods
infosec_labs/10/: aes_eax_192.py  example.py  example2.py  logger.py  main.py  mit.txt  mit_encrypted.txt  omac.py  test.py
infosec_labs/10/old/: test_vectors.py  utils.py
infosec_labs/11/: grasshopper.py  main.py  mit_encrypted.txt  mit_encrypted.txt.pi01
infosec_labs/2/: close-text.asc  open-text.txt.asc  pubkey.asc
infosec_labs/3/: keylogger.py
infosec_labs/4/: box.crt  box.csr  box.key  ca.crt  ca.key
infosec_labs/5/: antivirus.py  report.txt
infosec_labs/6/: result-random.md5  result.md5  result.sha512
infosec_labs/7/: shadow.report  shadow.search
infosec_labs/8/: main.py
infosec_labs/9/: blockchain.txt
logs/: 10_decrypted.txt  keylogger.txt
